--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<header class="banner-container" role="banner">
 		
 		<div class="item1">
-			<a class= "homeLink" href="home.html"><img class="signature" src="images/signature.webp" width="200" height="80" alt="Nereida Rondon Home link"></a>
+			<a class= "homeLink" href="index.html"><img class="signature" src="images/signature.webp" width="200" height="80" alt="Nereida Rondon Home link"></a>
 		</div>
 			
 		<div class="item2"></div>
@@ -69,7 +69,7 @@
 	<!-----------------------NAV MENU-------------------------------->
 		<nav role="navigation">	
 			<ul>
-				<a href="home.html"><li>Home</li></a>
+				<a href="index.html"><li>Home</li></a>
 				<a href="projects.html"><li>Projects</li></a>
 				<a href="about.html"><li>About</li></a>	
 				<a href="contact.html"><li>Contact</li></a>
@@ -182,7 +182,7 @@
 	</section>
 	
 	<br>
-	<a href="home.html" class="scrolly">BACK TO TOP</a>   
+	<a href="index.html" class="scrolly">BACK TO TOP</a>   
 
 	<div class="footer">
 		<footer>Created by Nereida Rondon ©️2022</footer>
