--- a/project1.html
+++ b/project1.html
@@ -11,7 +11,10 @@
     
 	<link rel="stylesheet" href="source/styles.css">
 	<link rel="stylesheet" href="source/buttons.css">
-		
+	
+	<!-- Font Awesome Icons -->
+	<script src="https://kit.fontawesome.com/d34772c9df.js" crossorigin="anonymous"></script>
+
 	<!--Googlefont info-->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
